--- a/jtweet/jtweet/jtweetapp/templates/jtweetapp/base.html
+++ b/jtweet/jtweet/jtweetapp/templates/jtweetapp/base.html
@@ -26,6 +26,10 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
 
+	<!-- NUEVO TEMPLATE -->
+	<link href="/static/bootstrap/dist/css/landing-page.css" rel="stylesheet">
+
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -73,12 +77,12 @@
       </div>
     </div>
 	{% endblock %}
-    <div class="container theme-showcase" role="main">
+    <!--<div class="container theme-showcase" role="main">-->
 	 {% block content %}
 
      {% endblock %}
 
-    </div> <!-- /container -->
+    <!--</div> <!-- /container -->
 
 	{% block js%}
     <!-- Bootstrap core JavaScript
